# docs/swagger.yaml
@@ -25,9 +25,39 @@ definitions:
     required:
     - expression
     type: object
+  models.ExpressionSolving:
+    properties:
+      answer:
+        type: string
+      id:
+        type: integer
+    required:
+    - answer
+    - id
+    type: object
 info:
   contact: {}
 paths:
+  /expression/{id}:
+    get:
+      parameters:
+      - description: Expression ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Expression'
+        "500":
+          description: unprocessed error
+          schema:
+            $ref: '#/definitions/models.Error'
+      summary: Get info about 1 expression
+      tags:
+      - expression
   /expression/add:
     post:
       consumes:
@@ -71,28 +101,33 @@ paths:
       summary: Get all expressions
       tags:
       - expression
-  /worker/heartbeat:
+  /expression/solve:
     post:
+      consumes:
+      - application/json
+      parameters:
+      - description: solve of expression
+        in: body
+        name: solve
+        required: true
+        schema:
+          $ref: '#/definitions/models.ExpressionSolving'
       responses:
         "200":
-          description: OK
+          description: id of just created expression
           schema:
-            $ref: '#/definitions/models.Expression'
+            type: string
         "400":
-          description: parsing ID error
-          schema:
-            $ref: '#/definitions/models.Error'
-        "404":
-          description: no worker with such ID
+          description: incorrect body
           schema:
             $ref: '#/definitions/models.Error'
         "500":
           description: unprocessed error
           schema:
             $ref: '#/definitions/models.Error'
-      summary: Handling heartbeats
+      summary: Add a solve on expression
       tags:
-      - worker
+      - expression
   /worker/register:
     post:
       consumes:
